fix: readability for mobile
This commit makes the site look better on mobile by removing the sidebar
on smaller devices.

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   overflow: auto;
 }
 
+@media only screen and (max-width: 700px) {
+  .App-sidebar {
+    display: none;
+  }
+}
+
 .App-content{
   margin-top: 16px;
   flex-direction: column;
